fixed the header scrollbar offset issue except for when a user reloads then its fuckdddd until you press edit, who knows why -_-

--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,7 @@
 }
 
 .qv-object-tableWithGrowth .tbl-content {
-    overflow-x:scroll;
+    overflow-y: auto;
     margin-top: 0px;
     border: 1px solid rgb(220, 220, 220);
     border-radius: 0 0 5px 5px;
@@ -34,6 +34,9 @@
     font-weight: 300;
     font-size: 12px;
     border-bottom: solid 1px rgb(220, 220, 220);
+}
+.qv-object-tableWithGrowth .scroll-offset {
+    padding:0px;
 }
 
 .qv-object-tableWithGrowth .tbl-wrapper {
